--- a/src/components/Checklist/Controls/control/control.module.css
+++ b/src/components/Checklist/Controls/control/control.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 1px solid beige;
     margin: 5px 0;
 }
 
@@ -21,12 +22,16 @@
     border: 1px solid #7E7365;
     color: #ccc;
     cursor: default;
+    
 }
+
+
 
 .Label {
     padding: 10px;
     font-weight: bold;
     width: 260px;
+    cursor: pointer;
 }
 
 .Control .Less {
@@ -47,4 +52,15 @@
 .Control .More:hover, .Control .More:active {
     background-color: #99703F;
     color:white;
+}
+
+@media (max-width:500px)
+{
+    .Label {
+width: 150px;
+    }
+    .Control button{
+        padding: 1px;
+        width: 70px;
+    }
 }
