--- a/src/components/Checklist/Controls/control/control.module.css
+++ b/src/components/Checklist/Controls/control/control.module.css
@@ -1,20 +1,27 @@
 .Control {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    flex-flow: column;
     align-items: center;
     border: 1px solid beige;
     margin: 5px 0;
+    padding: 15px;
+}
+.counter {
+    display: flex;
+    justify-content: space-between;
 }
 
 .Control button {
     display: block;
     font: inherit;
-    padding: 5px;
-    margin: 0 5px;
-    width: 80px;
+    padding-bottom: 5px;
+    margin: 0 15px;
+    width: 60px;
     border: 1px solid #AA6817;
     cursor: pointer;
     outline: none;
+    font-size: x-large;
 }
 
 .Control button:disabled {
@@ -25,7 +32,9 @@
     
 }
 
-
+.logo{
+   
+}
 
 .Label {
     padding: 10px;
